--- a/app/src/main/res/layout/activity_zombie_client.xml
+++ b/app/src/main/res/layout/activity_zombie_client.xml
@@ -22,7 +22,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:hint="IP"
-            android:text="192.168.10.190" />
+            android:text="basen.oru.se" />
 
         <EditText
             android:id="@+id/port_edittext"
